--- a/Game Design/custom game/index2.html
+++ b/Game Design/custom game/index2.html
@@ -8,14 +8,14 @@ function start(){
 sjs.open();
 
 sjs.keyDown(SPACE_KEY, function(){
-window.location = "Index2.html";
+window.location = "Index3.html";
 
 
 info_text.bottom().centerH();
 });
 
 sjs.open("target", 700,700);
-var background = new sjs.Image("Images/index.png");
+var background = new sjs.Image("Images/index2.gif");
 background.setSize(sjs.getWidth(), sjs.getHeight());
 
 
@@ -27,5 +27,4 @@ background.setSize(sjs.getWidth(), sjs.getHeight());
 <div id="target" style="margin:auto;background:gray;"></div>
 </body>
 </html>
-
 
