--- a/Game Design/custom game/level2.html
+++ b/Game Design/custom game/level2.html
@@ -7,15 +7,12 @@
 function start(){
 sjs.open();
 
-sjs.keyDown(SPACE_KEY, function(){
-window.location = "Index2.html";
 
 
-info_text.bottom().centerH();
-});
+
 
 sjs.open("target", 700,700);
-var background = new sjs.Image("Images/index.png");
+var background = new sjs.Image("Images/Level2index.gif");
 background.setSize(sjs.getWidth(), sjs.getHeight());
 
 
@@ -27,5 +24,3 @@ background.setSize(sjs.getWidth(), sjs.getHeight());
 <div id="target" style="margin:auto;background:gray;"></div>
 </body>
 </html>
-
-
