--- a/Custom Game/Index2.html
+++ b/Custom Game/Index2.html
@@ -8,7 +8,7 @@ function start(){
 sjs.open();
 
 sjs.keyDown(SPACE_KEY, function(){
-window.location = "Index3.html";
+window.location = "index3.html";
 
 
 info_text.bottom().centerH();
