--- a/index3.html
+++ b/index3.html
@@ -8,7 +8,7 @@ function start(){
 sjs.open();
 
 sjs.keyDown(SPACE_KEY, function(){
-window.location = "Index4.html";
+window.location = "index4.html";
 
 
 info_text.bottom().centerH();
