--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@ function start(){
 sjs.open();
 
 sjs.keyDown(SPACE_KEY, function(){
-window.location = "index4.html";
+window.location = "Index2.html";
 
 
 info_text.bottom().centerH();
 });
 
 sjs.open("target", 700,700);
-var background = new sjs.Image("Images/index2.gif");
+var background = new sjs.Image("Images/index.png");
 background.setSize(sjs.getWidth(), sjs.getHeight());
 
 
