--- a/Game Design/index.html
+++ b/Game Design/index.html
@@ -8,7 +8,7 @@ function start(){
 sjs.open();
 
 sjs.keyDown(SPACE_KEY, function(){
-window.location = "Index2.html";
+window.location = "index2.html";
 
 
 info_text.bottom().centerH();
