--- a/Custom Game/level1.html
+++ b/Custom Game/level1.html
@@ -43,7 +43,8 @@ player.pushDown();
  
 var score = 0;
 var score_txt = new sjs.Text("Score: 0", 21, "gold");
-
+localStorage.setItem("score", score);
+	
 var song = new Audio("https://s3-us-west-2.amazonaws.com/simplycoding/GameDesignVideos/Images/mountain.mp3");
 
 	sjs.keyDown(P_KEY,function(){
