--- a/Level1.html
+++ b/Level1.html
@@ -62,7 +62,7 @@ score = score + 1;
 score_txt.setText("Score: "+score);
 });
 sjs.onHit("player","end", function(player,end){
-window.location = "level2index.html";
+window.location = "level2.html";
 });
 }
 
