--- a/level2.html
+++ b/level2.html
@@ -7,7 +7,7 @@
 function start(){
 sjs.open();
 
-
+var score_txt = new sjs.Text("Your Score: ", 21, "gold"); score_txt.setText("Score: "+localStorage.getItem("score"));
 
 
 
