--- a/Custom Game/level1.html
+++ b/Custom Game/level1.html
@@ -40,8 +40,8 @@ player.pushUp();
 sjs.keyDown(DOWN_KEY, function(){
 player.pushDown();
 });
- 
-var score_txt = new sjs.Text("Score: 0", 21, "gold");
+var score = 0;
+var score = new sjs.Text("Score: 0", 21, "gold");
 localStorage.setItem("score", score);
 	
 var song = new Audio("https://s3-us-west-2.amazonaws.com/simplycoding/GameDesignVideos/Images/mountain.mp3");
