--- a/Custom Game/level2.html
+++ b/Custom Game/level2.html
@@ -7,7 +7,7 @@
 function start(){
 sjs.open();
 var score = 0;
-var score = new sjs.Text("Your Score: ", 21, "orange"); score.setText("Score: "+localStorage.getItem("score"));
+var score = new sjs.Text("Your Score: ", 21, "gold"); score.setText("Score: "+localStorage.getItem("score"));
 
 
 
