--- a/Custom Game/level2.html
+++ b/Custom Game/level2.html
@@ -6,10 +6,9 @@
 <script>
 function start(){
 sjs.open();
-var score = 0;
-var score = new sjs.Text("Your Score: ", 21, "gold"); score.setText("Score: "+localStorage.getItem("score"));
 
-
+var score_txt = new sjs.Text("Your Score: ", 21, "orange");
+score_txt.setText("Score: "+localStorage.getItem("score"));
 
 sjs.open("target", 700,700);
 var background = new sjs.Image("Images/Level2index.gif");
