--- a/level1.html
+++ b/level1.html
@@ -19,7 +19,8 @@ window.location = "index.html";
 }, 28000);
 
 
-
+var score = 0;
+var score_txt = new sjs.Text("Score: 0", 21, "gold");
 
 var player = new sjs.Image("Images/player.png");
 player.type = "player";
