--- a/level2.html
+++ b/level2.html
@@ -7,7 +7,7 @@
 function start(){
 sjs.open();
 
-var score_txt = new sjs.Text("Score: 0", 21, "orange");
+var score_txt = new sjs.Text("Score: 0", 21, "gold");
 score_txt.setText("Score: " +localStorage.getItem("score"));
 
 sjs.open("target", 700,700);
