--- a/level2.html
+++ b/level2.html
@@ -6,7 +6,7 @@
 <script>
 function start(){
 sjs.open();
-var score_txt = new sjs.Text("Score: 0", 21, "gold");
+var score_txt = new sjs.Text("Your score wasnt good enough: 0", 21, "gold");
 score_txt.setText("Score: " +localStorage.getItem("score"));
 
 sjs.open("target", 700,700);
