--- a/Custom Game/level2.html
+++ b/Custom Game/level2.html
@@ -7,7 +7,7 @@
 function start(){
 sjs.open();
 
-var score_txt = new sjs.Text("Score: 0", 21, "gold");
+var score_txt = new sjs.Text("Your score wasnt good enough: 0", 21, "gold");
 score_txt.setText("Score: " +localStorage.getItem("score"));
 
 
