--- a/Custom Game/index4.html
+++ b/Custom Game/index4.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title> Menu </title>
+<title> You </title>
 <script src="https://simplycodingcourses.com/files/simplyjs/simply.js"></script>
 <script>
 function start(){
