--- a/Custom Game/level1.html
+++ b/Custom Game/level1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title> level 1 </title>
+<title> Up </title>
 <script src="https://simplycodingcourses.com/files/simplyjs/simply.js"></script>
 <script>
 var level = [];
